<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/idetify_car_make_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="identifyCarMake"
        android:text="@string/identify_the_car_make_label"
        android:textSize="16sp"
        app:backgroundTint="#3018B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_screen_heading_portrait" />

    <Button
        android:id="@+id/hint_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="hintsCarMake"
        android:text="@string/hints_label"
        android:textSize="16sp"
        app:backgroundTint="#3018B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idetify_car_make_button" />

    <Button
        android:id="@+id/identify_car_image_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="identifyCarImage"
        android:text="@string/idetify_the_car_image_label"
        android:textSize="16sp"
        app:backgroundTint="#3018B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_button" />

    <Button
        android:id="@+id/advance_level_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="advancedLevel"
        android:text="@string/advance_level_label"
        android:textSize="16sp"
        app:backgroundTint="#3018B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_car_image_button" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:checked="false"
        android:fontFamily="sans-serif-black"
        android:text="@string/switch_text_value"
        android:textColor="#162ECC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView

        android:id="@+id/home_image_1"
        android:layout_width="179dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/home_page_image_01_description"
        android:src="@drawable/car_image_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advance_level_button" />

    <ImageView
        android:id="@+id/home_image_2"
        android:layout_width="179dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/home_page_image_02_description"
        app:layout_constraintStart_toEndOf="@+id/home_image_1"
        android:src="@drawable/car_image_4"
        app:layout_constraintTop_toBottomOf="@+id/advance_level_button" />

    <TextView
        android:id="@+id/home_screen_heading_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/home_game_levels"
        android:textColor="#2940B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/switchButton"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>