<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyCarImageActivity">

    <ImageView
        android:id="@+id/car_image_1"
        android:layout_width="224dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:clickable="false"
        android:contentDescription="@string/identify_car_image_1"
        android:maxWidth="224dp"
        android:maxHeight="146dp"
        android:minWidth="100dp"
        android:onClick="confirmAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_view_car_image_activity" />

    <ImageView
        android:id="@+id/car_image_2"
        android:layout_width="224dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:contentDescription="@string/identify_car_image_2"
        android:maxWidth="224dp"
        android:maxHeight="146dp"
        android:minWidth="100dp"
        android:onClick="confirmAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_image_1" />

    <ImageView
        android:id="@+id/car_image_3"
        android:layout_width="224dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:contentDescription="@string/identify_car_image_3"
        android:maxWidth="224dp"
        android:maxHeight="146dp"
        android:minWidth="100dp"
        android:onClick="confirmAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_image_2" />

    <TextView
        android:id="@+id/desciption_label"
        android:layout_width="130dp"
        android:layout_height="121dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/find_correct_car_label"
        android:textAlignment="center"
        android:textColor="#145E71"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/car_image_1"
        app:layout_constraintTop_toBottomOf="@+id/timer_view_car_image_activity" />

    <TextView
        android:id="@+id/correct_car_maker_label"
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="center"
        android:textColor="#162ECC"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/car_image_2"
        app:layout_constraintTop_toBottomOf="@+id/desciption_label" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="startNewGame"
        android:text="@string/next_button_label"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#3018B6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/correct_answer_text_view"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text_view" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_image_3" />

    <TextView
        android:id="@+id/timer_view_car_image_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="#090707"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>