<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HintsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/timerCountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:paddingTop="8dp"
        android:textColor="#090707"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/identify_car_image_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/identify_car_image_view_description"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal" />

 <TextView
     android:id="@+id/word_need_to_guess"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:gravity="center_horizontal|center_vertical"
     android:textAlignment="center"
     android:textSize="30sp"
     android:textStyle="bold" />

 <EditText
     android:id="@+id/edit_input"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:ems="10"
     android:gravity="center_horizontal|center_vertical"
     android:hint="@string/hint_enter_one_letter"
     android:inputType="textPersonName"
     android:maxLength="1"
     android:textAlignment="center"
     android:textStyle="bold" />

 <TextView
     android:id="@+id/status_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_weight="1"
     android:fontFamily="sans-serif-black"
     android:textSize="20sp"
     android:textStyle="bold"
     android:visibility="invisible" />

 <TextView
     android:id="@+id/hints_result_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_weight="1"
     android:fontFamily="sans-serif-black"
     android:textSize="20sp"
     android:textStyle="bold"
     android:visibility="invisible" />

    <Button
        android:id="@+id/hints_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:onClick="confirmGuessLetter"
        android:text="@string/submit_button_label"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#3018B6" />




</LinearLayout>